--- a/Microsoft.Windows.Toolkit.SampleApp/Shell.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/Shell.xaml
@@ -31,26 +31,6 @@
             </Grid>
         </DataTemplate>
 
-        <Flyout x:Key="AboutFlyout" Placement="Full" FlyoutPresenterStyle="{StaticResource TooltipFlyoutPresenterStyle}">
-            <Grid Margin="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <TextBlock Text="{Binding Name}" Margin="0,10" FontSize="30" Grid.Row="0" />
-                <TextBlock Text="{Binding About}" Grid.Row="1" TextWrapping="WrapWholeWords" Margin="0,10,0,20" />
-                <TextBlock Text="View code on Github:" Grid.Row="2" />
-                <HyperlinkButton Grid.Row="3" NavigateUri="{Binding CodeUrl}">
-                    <TextBlock TextWrapping="Wrap">
-            <Underline>
-              <Run Text="{Binding CodeUrl}"/>
-            </Underline>
-                    </TextBlock>
-                </HyperlinkButton>
-            </Grid>
-        </Flyout>
     </Page.Resources>
 
     <controls:HamburgerMenu PaneBackground="{StaticResource Brush-Grey-02}" x:Name="HamburgerMenu"
@@ -67,7 +47,17 @@
                         <AdaptiveTrigger MinWindowWidth="0"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="YellowRect.Visibility" Value="Collapsed"/>
+                        <Setter Target="InfoAreaGrid.(Grid.Row)" Value="1"/>
+                        <Setter Target="InfoAreaGrid.(Grid.Column)" Value="0"/>
+                        <Setter Target="InfoAreaGrid.(Grid.RowSpan)" Value="1"/>
+                        <Setter Target="InfoAreaGrid.(Grid.ColumnSpan)" Value="2"/>
+
+                        <Setter Target="DemoAreaGrid.(Grid.Row)" Value="0"/>
+                        <Setter Target="DemoAreaGrid.(Grid.Column)" Value="0"/>
+                        <Setter Target="DemoAreaGrid.(Grid.RowSpan)" Value="1"/>
+                        <Setter Target="DemoAreaGrid.(Grid.ColumnSpan)" Value="2"/>
+
+                        <Setter Target="ExpandButton.Content" Value=""/>                        
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="MediumState">
@@ -122,6 +112,7 @@
             </Grid.RowDefinitions>
 
             <Grid x:Name="DemoAreaGrid">
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Landing page"/>
                 <Frame x:Name="NavigationFrame" />
             </Grid>
 
