--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ScaleBehavior/ScaleBehaviorPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ScaleBehavior/ScaleBehaviorPage.xaml
@@ -13,7 +13,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Rectangle Fill="red" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
-                <behaviors:Scale x:Name="Scale" ScaleX="{Binding ScaleX.Value, Mode=TwoWay}" ScaleY="{Binding ScaleY.Value, Mode=TwoWay}" ScaleZ="{Binding ScaleZ.Value, Mode=TwoWay}" Duration="{Binding Duration.Value, Mode=TwoWay}" Delay="{Binding Delay.Value, Mode=TwoWay}" AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
+                <behaviors:Scale x:Name="Scale" ScaleX="{Binding ScaleX.Value, Mode=TwoWay}" ScaleY="{Binding ScaleY.Value, Mode=TwoWay}" ScaleZ="{Binding ScaleZ.Value, Mode=TwoWay}" CenterX="{Binding CenterX.Value, Mode=TwoWay}" CenterY="{Binding CenterY.Value, Mode=TwoWay}" CenterZ="{Binding CenterZ.Value, Mode=TwoWay}" Duration="{Binding Duration.Value, Mode=TwoWay}" Delay="{Binding Delay.Value, Mode=TwoWay}" AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
             </interactivity:Interaction.Behaviors>
         </Rectangle>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
