--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/OpacityBehavior/OpacityBehaviorPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/OpacityBehavior/OpacityBehaviorPage.xaml
@@ -11,14 +11,20 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Rectangle Fill="red" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
-                <behaviors:Opacity x:Name="Opacity" Value="{Binding Value.Value, Mode=TwoWay}" Duration="{Binding Duration.Value, Mode=TwoWay}" Delay="{Binding Delay.Value, Mode=TwoWay}" AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
+                <behaviors:Opacity x:Name="Opacity" 
+                                   Value="{Binding Value.Value, Mode=TwoWay}" 
+                                   Duration="{Binding Duration.Value, Mode=TwoWay}" 
+                                   Delay="{Binding Delay.Value, Mode=TwoWay}" 
+                                   AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
             </interactivity:Interaction.Behaviors>
         </Rectangle>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <Button Content="Apply" Margin="10">
                 <interactivity:Interaction.Behaviors>
                     <core:EventTriggerBehavior EventName="Click">
-                        <core:CallMethodAction TargetObject="{Binding ElementName=Opacity}" MethodName="StartAnimation"/>
+                        <core:CallMethodAction 
+                            TargetObject="{Binding ElementName=Opacity}" 
+                            MethodName="StartAnimation"/>
                     </core:EventTriggerBehavior>
                 </interactivity:Interaction.Behaviors>
             </Button>
