--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RotationBehavior/RotationBehaviorPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RotationBehavior/RotationBehaviorPage.xaml
@@ -12,14 +12,23 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Rectangle Fill="red" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
-                <behaviors:Rotation x:Name="Rotation" Value="{Binding Value.Value, Mode=TwoWay}" CenterX="{Binding CenterX.Value, Mode=TwoWay}" CenterY="{Binding CenterY.Value, Mode=TwoWay}" CenterZ="{Binding CenterZ.Value, Mode=TwoWay}" Duration="{Binding Duration.Value, Mode=TwoWay}" Delay="{Binding Delay.Value, Mode=TwoWay}" AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
+                <behaviors:Rotation x:Name="Rotation" 
+                                    Value="{Binding Value.Value, Mode=TwoWay}" 
+                                    CenterX="{Binding CenterX.Value, Mode=TwoWay}" 
+                                    CenterY="{Binding CenterY.Value, Mode=TwoWay}" 
+                                    CenterZ="{Binding CenterZ.Value, Mode=TwoWay}" 
+                                    Duration="{Binding Duration.Value, Mode=TwoWay}" 
+                                    Delay="{Binding Delay.Value, Mode=TwoWay}" 
+                                    AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
             </interactivity:Interaction.Behaviors>
         </Rectangle>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <Button Content="Apply" Margin="10">
                 <interactivity:Interaction.Behaviors>
                     <core:EventTriggerBehavior EventName="Click">
-                        <core:CallMethodAction TargetObject="{Binding ElementName=Rotation}" MethodName="StartAnimation"/>
+                        <core:CallMethodAction 
+                            TargetObject="{Binding ElementName=Rotation}" 
+                            MethodName="StartAnimation"/>
                     </core:EventTriggerBehavior>
                 </interactivity:Interaction.Behaviors>
             </Button>
