--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ScaleBehavior/ScaleBehaviorPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ScaleBehavior/ScaleBehaviorPage.xaml
@@ -2,7 +2,6 @@
     x:Class="Microsoft.Windows.Toolkit.SampleApp.SamplePages.ScaleBehaviorPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Windows.Toolkit.SampleApp.SamplePages.ScaleBehavior"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
@@ -13,14 +12,25 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Rectangle Fill="red" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
-                <behaviors:Scale x:Name="Scale" ScaleX="{Binding ScaleX.Value, Mode=TwoWay}" ScaleY="{Binding ScaleY.Value, Mode=TwoWay}" ScaleZ="{Binding ScaleZ.Value, Mode=TwoWay}" CenterX="{Binding CenterX.Value, Mode=TwoWay}" CenterY="{Binding CenterY.Value, Mode=TwoWay}" CenterZ="{Binding CenterZ.Value, Mode=TwoWay}" Duration="{Binding Duration.Value, Mode=TwoWay}" Delay="{Binding Delay.Value, Mode=TwoWay}" AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
+                <behaviors:Scale x:Name="Scale" 
+                                 ScaleX="{Binding ScaleX.Value, Mode=TwoWay}" 
+                                 ScaleY="{Binding ScaleY.Value, Mode=TwoWay}" 
+                                 ScaleZ="{Binding ScaleZ.Value, Mode=TwoWay}" 
+                                 CenterX="{Binding CenterX.Value, Mode=TwoWay}" 
+                                 CenterY="{Binding CenterY.Value, Mode=TwoWay}" 
+                                 CenterZ="{Binding CenterZ.Value, Mode=TwoWay}" 
+                                 Duration="{Binding Duration.Value, Mode=TwoWay}" 
+                                 Delay="{Binding Delay.Value, Mode=TwoWay}" 
+                                 AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=TwoWay}"/>
             </interactivity:Interaction.Behaviors>
         </Rectangle>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <Button Content="Apply" Margin="10">
                 <interactivity:Interaction.Behaviors>
                     <core:EventTriggerBehavior EventName="Click">
-                        <core:CallMethodAction TargetObject="{Binding ElementName=Scale}" MethodName="StartAnimation"/>
+                        <core:CallMethodAction 
+                            TargetObject="{Binding ElementName=Scale}" 
+                            MethodName="StartAnimation"/>
                     </core:EventTriggerBehavior>
                 </interactivity:Interaction.Behaviors>
             </Button>
