--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/OffsetBehavior/OffsetBehaviorPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/OffsetBehavior/OffsetBehaviorPage.xaml
@@ -11,7 +11,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Rectangle Fill="red" Height="100" Width="100" >
+        <Rectangle x:Name="MyRectangle" Fill="red" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
                 <behaviors:Offset x:Name="Offset" 
                                   OffsetX="{Binding OffsetX.Value, Mode=TwoWay}" 
