--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ScaleBehavior/ScaleBehaviorPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ScaleBehavior/ScaleBehaviorPage.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Rectangle Fill="red" Height="100" Width="100" >
+        <Rectangle x:Name="MyRectangle" Fill="red" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
                 <behaviors:Scale x:Name="Scale" 
                                  ScaleX="{Binding ScaleX.Value, Mode=TwoWay}" 
