--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/LiveTile/LiveTilePage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/LiveTile/LiveTilePage.xaml
@@ -18,7 +18,7 @@
                 HorizontalAlignment="Stretch"
                 Margin="20,20,20,0"/>
 
-            <RichTextBlock Margin="20,10,20,0">
+            <RichTextBlock Margin="20,10,20,0" Foreground="{StaticResource Brush-Grey-03}">
                 <Paragraph>Click the button to pin a secondary tile and send a notification to the tile, displaying rich visual content. The previews below show you what the tile will look like when you pin it.</Paragraph>
                 <Paragraph/>
                 <Paragraph FontSize="12">
