--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Toast/ToastPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Toast/ToastPage.xaml
@@ -17,7 +17,7 @@
                 Click="ButtonPopToast_Click"
                 HorizontalAlignment="Stretch"/>
 
-            <RichTextBlock Margin="0,10,0,0">
+            <RichTextBlock Margin="0,10,0,0" Foreground="{StaticResource Brush-Grey-03}">
                 <Paragraph>The button will pop a Toast notification reminder about your calendar appointment. A preview is seen below.</Paragraph>
                 <Paragraph/>
                 <Paragraph FontSize="12">
