--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/WeatherLiveTileAndToast/WeatherLiveTileAndToastPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/WeatherLiveTileAndToast/WeatherLiveTileAndToastPage.xaml
@@ -23,7 +23,7 @@
                 HorizontalAlignment="Stretch"
                 Margin="0,10,0,0"/>
 
-            <RichTextBlock Margin="0,10,0,0">
+            <RichTextBlock Margin="0,10,0,0" Foreground="{StaticResource Brush-Grey-03}">
                 <Paragraph>The first button will pop a Toast notification displaying the weather forecast.</Paragraph>
                 <Paragraph/>
                 <Paragraph>The second button will pin a secondary Tile and send a notification to the Tile, displaying the weather forecast.</Paragraph>
