--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/FlipTile/FlipTilePage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/FlipTile/FlipTilePage.xaml
@@ -10,7 +10,11 @@
     <Page.Resources>
         <DataTemplate x:Key="PhotoTemplate">
             <Grid>
-                <Image Source="{Binding Thumbnail}" Stretch="UniformToFill"/>
+                <Image HorizontalAlignment="Center" Stretch="UniformToFill" >
+                    <Image.Source>
+                        <BitmapImage UriSource="{Binding Thumbnail}" DecodePixelHeight="200" />
+                    </Image.Source>
+                </Image>
                 <Border VerticalAlignment="Bottom">
                     <Border.Background>
                         <LinearGradientBrush EndPoint="0,1">
@@ -23,31 +27,41 @@
             </Grid>
         </DataTemplate>
     </Page.Resources>
-    <Grid>
-        <StackPanel>
-        <StackPanel Orientation="Horizontal">
+    <Grid  Background="{StaticResource Brush-Grey-05}">
+        <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-                <controls:LiveTile Background="LightGray" x:Name="Tile1" 
-                               ItemsSource="{x:Bind Photos}" Direction="Up" 
-                               Width="400" Height="200" Margin="20"
-                               ItemTemplate="{StaticResource PhotoTemplate}" />
+            <controls:LiveTile Background="LightGray" x:Name="Tile1" 
+                            ItemsSource="{x:Bind Photos}" Direction="Up" 
+                            Width="400" Height="200" Margin="20"
+                            ItemTemplate="{StaticResource PhotoTemplate}" 
+                            Grid.Column="0" Grid.Row="0" />
 
-                <controls:LiveTile Background="LightGray" x:Name="Tile2"
-                               ItemsSource="{x:Bind Photos}" Direction="Left"
-                               Width="200" Height="200" Margin="20"
-                               ItemTemplate="{StaticResource PhotoTemplate}"/>
+            <controls:LiveTile Background="LightGray" x:Name="Tile2"
+                            ItemsSource="{x:Bind Photos}" Direction="Left"
+                            Width="200" Height="200" Margin="20"
+                            ItemTemplate="{StaticResource PhotoTemplate}"
+                            Grid.Column="1" Grid.Row="0" />
 
-            </StackPanel>
+            <!--Panels for showing more information about the current item-->
 
-            <StackPanel Orientation="Horizontal">
-                <Border Background="White" Padding="5" Width="400" Height="50" Margin="20,0" >
-                    <TextBlock Text="{Binding ElementName=Tile1, Path=SelectedItem.Title}" TextWrapping="Wrap" VerticalAlignment="Top" />
-                </Border>
-                <Border Background="White" Padding="5" Width="200" Height="50" Margin="20,0">
-                        <TextBlock Text="{Binding ElementName=Tile2, Path=SelectedItem.Title}" TextWrapping="Wrap" VerticalAlignment="Top" />
-                </Border>
-            </StackPanel>
-            
-        </StackPanel>
+            <Border Background="White" Padding="5" Width="400" Height="75" Margin="20,0"
+                    Grid.Column="0" Grid.Row="1" >
+                <TextBlock Text="{Binding ElementName=Tile1, Path=SelectedItem.Title}" TextWrapping="Wrap" VerticalAlignment="Top" />
+            </Border>
+
+            <Border Background="White" Padding="5" Width="200" Height="75" Margin="20,0"
+                    Grid.Column="1" Grid.Row="1" >
+                <TextBlock Text="{Binding ElementName=Tile2, Path=SelectedItem.Title}" TextWrapping="Wrap" VerticalAlignment="Top" />
+            </Border>
+
+        </Grid>
     </Grid>
 </Page>
