Changing variables to match the control type
Rather than the name of control changed variables to be TypeNameControl
to make it easier to understand for novice programmers

--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Carousel/CarouselPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Carousel/CarouselPage.xaml
@@ -20,7 +20,7 @@
 
     <Grid Background="{StaticResource Brush-Grey-05}">
         <controls:Carousel
-                Name="control"
+                Name="CarouselControl"
                 ContentTemplate="{StaticResource PhotosTemplate}"
                 MaxItems="{Binding MaxItems.Value}"
                 AspectRatio="{Binding AspectRatio.Value}"
