--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RangeSelector/RangeSelectorPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RangeSelector/RangeSelectorPage.xaml
@@ -21,7 +21,7 @@
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="{Binding RangeMin, ElementName=RangeSelector, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}" 
                        Foreground="Black" />
-            <controls:RangeSelector x:Name="RangeSelector" Grid.Column="1"
+            <controls:RangeSelector x:Name="RangeSelectorControl" Grid.Column="1"
                  Minimum="{Binding Minimum.Value, Mode=TwoWay}" 
                  Maximum="{Binding Maximum.Value, Mode=TwoWay}" />
             <TextBlock Grid.Column="2" Text="{Binding RangeMax, ElementName=RangeSelector, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}"
