--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ResponsiveGridView/ResponsiveGridViewPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ResponsiveGridView/ResponsiveGridViewPage.xaml
@@ -21,7 +21,7 @@
 
 	<Grid Background="{StaticResource Brush-Grey-05}">
 		<controls:ResponsiveGridView
-          Name="control"
+          Name="ResponsiveGridViewControl"
           ItemHeight="{Binding ItemHeight.Value}"
           DesiredWidth="{Binding DesiredWidth.Value}"
           ItemTemplate="{StaticResource PhotosTemplate}"/>
