--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RotatorTile/RotatorTilePage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RotatorTile/RotatorTilePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Microsoft.Windows.Toolkit.SampleApp.SamplePages.FlipTilePage"
+    x:Class="Microsoft.Windows.Toolkit.SampleApp.SamplePages.RotatorTilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -38,13 +38,13 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <controls:LiveTile Background="LightGray" x:Name="Tile1" 
+            <controls:RotatorTile Background="LightGray" x:Name="Tile1" 
                             ItemsSource="{x:Bind Photos}" Direction="Up" 
                             Width="400" Height="200" Margin="20"
                             ItemTemplate="{StaticResource PhotoTemplate}" 
                             Grid.Column="0" Grid.Row="0" />
 
-            <controls:LiveTile Background="LightGray" x:Name="Tile2"
+            <controls:RotatorTile Background="LightGray" x:Name="Tile2"
                             ItemsSource="{x:Bind Photos}" Direction="Left"
                             Width="200" Height="200" Margin="20"
                             ItemTemplate="{StaticResource PhotoTemplate}"
