Cleanup descriptions of behaviors to match docs
Also removed the Facebook control from being displayed in the sample app
since we are not going to ship it initially.

--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
@@ -10,7 +10,7 @@
     <Page.Resources>
         <DataTemplate x:Key="PhotoTemplate">
             <Grid BorderBrush="Black" BorderThickness="1" Background="Black">
-                <controls:ImageEx
+                <controls:ImageEx x:Name="ImageExControl"
                     IsCacheEnabled="True"
                     Source="{Binding Thumbnail}"
                     Stretch="UniformToFill"
