--- a/Microsoft.Windows.Toolkit.UI.Controls/Themes/Generic.xaml
+++ b/Microsoft.Windows.Toolkit.UI.Controls/Themes/Generic.xaml
@@ -2,16 +2,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-		<ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/HamburgerMenu/HamburgerMenu.xaml"/>
-		<ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/ResponsiveGridView/ResponsiveGridView.xaml"/>
-		<ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/VariableSizedGridView/VariableSizedGridView.xaml"/>
-        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/RangeSelector/RangeSelector.xaml"/>
-        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/SlidableListItem/SlidableListItem.xaml"/>
-        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/ImageEx/ImageEx.xaml"/>
-        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml" />
-        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/RadialGauge/RadialGauge.xaml" />
-        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/PullToRefreshListView/PullToRefreshListView.xaml" />
-        <ResourceDictionary Source="ms-appx:///Microsoft.Windows.Toolkit.UI.Controls/RotatorTile/RotatorTile.xaml" />
+		<ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/HamburgerMenu/HamburgerMenu.xaml"/>
+		<ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/ResponsiveGridView/ResponsiveGridView.xaml"/>
+		<ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/VariableSizedGridView/VariableSizedGridView.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/RangeSelector/RangeSelector.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/ImageEx/ImageEx.xaml"/>
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml" />
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/RadialGauge/RadialGauge.xaml" />
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/PullToRefreshListView/PullToRefreshListView.xaml" />
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
