--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
@@ -49,8 +49,8 @@
                 <TextBox Header="Title:" x:Name="TitleText"></TextBox>
                 <TextBox Header="Description:" x:Name="DescriptionText"></TextBox>
                 <TextBox Header="Url:" x:Name="UrlText" Text="https://github.com/Microsoft/WindowsAppToolkit"></TextBox>
-                <Button Content="Share text" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,10,0,0"></Button>
-                <Button Content="Share with picture" x:Name="SharePictureButton" Click="SharePictureButton_OnClick" Margin="0,10,0,0"></Button> 
+                <Button Content="Share text directly" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,10,0,0"></Button>
+                <Button Content="Share with picture using dialog" x:Name="SharePictureButton" Click="SharePictureButton_OnClick" Margin="0,10,0,0"></Button> 
             </StackPanel>
         </Border>
         <ListView Grid.Row="2" ItemTemplate="{StaticResource FacebookSchemaTemplate}" x:Name="ListView">
