--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/RotateBehavior/RotateBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/RotateBehavior/RotateBehaviorPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.RotationBehaviorPage"
+    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.RotateBehaviorPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity" 
@@ -12,7 +12,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Image x:Name="ToolkitLogo" Source="ms-appx:///Assets/Square150x150Logo.png" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
-                <behaviors:Rotation x:Name="Rotation" 
+                <behaviors:Rotate x:Name="Rotation" 
                                     Value="{Binding Value.Value, Mode=TwoWay}" 
                                     CenterX="{Binding CenterX.Value, Mode=TwoWay}" 
                                     CenterY="{Binding CenterY.Value, Mode=TwoWay}" 
