--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
@@ -8,58 +8,114 @@
     mc:Ignorable="d">
     <Page.Resources>
         <DataTemplate x:Key="FacebookSchemaTemplate" x:DataType="facebook:FacebookPost">
-            <Grid Margin="0,5,10,5" Height="100">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="100"></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <Image Source="{Binding Full_Picture}" Grid.RowSpan="2" Grid.Column="0" Stretch="UniformToFill"></Image>
-                <TextBlock Text="{x:Bind Message}" Grid.Row="0" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"></TextBlock>
-                <TextBlock Text="{x:Bind Created_Time}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="16" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" FontWeight="ExtraLight"></TextBlock>
-            </Grid>
+            <Border Background="White" BorderBrush="#FFCCCCCC" BorderThickness="1" Margin="24,0,24,12">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Image Source="{Binding Full_Picture}" Stretch="UniformToFill" MaxHeight="320" VerticalAlignment="Center" />
+                    <TextBlock Text="{x:Bind Message}" Margin="12" Grid.Row="1" TextWrapping="WrapWholeWords" TextTrimming="CharacterEllipsis" />
+                    <TextBlock Text="{x:Bind Created_Time}" Margin="12,0,12,12" Grid.Row="2" FontWeight="ExtraLight"></TextBlock>
+                </Grid>
+            </Border>
         </DataTemplate>
     </Page.Resources>
 
-    <Grid Background="{StaticResource Brush-Grey-05}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Vertical" Margin="10">
-                <TextBox Header="AppID:" x:Name="AppIDText"></TextBox>
-                <StackPanel Orientation="Horizontal">
-                    <ComboBox x:Name="QueryType" Header="Type:"></ComboBox>
-                    <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="10,0,0,0" VerticalAlignment="Bottom"></Button>
-                </StackPanel>
+    <Grid Background="{StaticResource Brush-Grey-05}" MaxWidth="800">
+        <Grid Margin="24" BorderThickness="1" BorderBrush="#FFCCCCCC" Background="{StaticResource Brush-Grey-04}" CornerRadius="4">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Image Height="100" Width="100" Stretch="Uniform" Source="/SamplePages/Facebook Service/FacebookLogo.png" Margin="24"/>
+                <Border CornerRadius="50" x:Name="ProfileImage" Height="100" Width="100" Visibility="Collapsed">
+                    <Border.Background>
+                        <ImageBrush Stretch="Uniform" ImageSource="{Binding Url}"/>
+                    </Border.Background>
+                </Border>
             </StackPanel>
-            <Image Grid.Column="1" x:Name="ProfileImage" Source="{Binding Url}" VerticalAlignment="Top" Margin="5"></Image>
+
+            <ScrollViewer Grid.Row="1">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    
+                    <!-- Credentials area -->
+                    <Grid >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Background="#FFCCCCCC">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Button x:Name="CredentialsBoxExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="CredentialsBoxExpandButton_OnClick"/>
+                            <TextBlock Grid.Column="1" Text="Credentials" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                        </Grid>
+
+                        <StackPanel x:Name="CredentialsBox" Orientation="Vertical" Margin="24" Grid.Row="1">
+                            <TextBox Header="App ID" x:Name="AppIDText" Margin="0,0,0,12"/>
+                            <StackPanel Orientation="Horizontal">
+                                <ComboBox x:Name="QueryType" Header="Type:"></ComboBox>
+                                <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="10,0,0,0" VerticalAlignment="Bottom"></Button>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
+                    
+                    <!-- Share to Facebook -->
+                    <Grid Grid.Row="1" x:Name="ShareBox">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Background="#FFCCCCCC">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Button x:Name="PostBoxExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="PostBoxExpandButton_OnClick"/>
+                            <TextBlock Grid.Column="1" Text="Post" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                        </Grid>
+
+                        <StackPanel Grid.Row="1" Margin="24" x:Name="PostPanel">
+                            <TextBox Header="Title" x:Name="TitleText" Margin="0,0,0,12"/>
+                            <TextBox Header="Description" x:Name="DescriptionText" Margin="0,0,0,12"/>
+                            <TextBox Header="Url" x:Name="UrlText" Text="https://github.com/Microsoft/UWPCommunityToolkit" Margin="0,0,0,12"/>
+                            <StackPanel Orientation="Horizontal" Margin="0,12">
+                                <Button Content="Share with dialog" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,0,12,0"/>
+                                <Button Content="Share directly with picture" x:Name="SharePictureButton" Click="SharePictureButton_OnClick"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
+
+                    <!-- Posts -->
+                    <ListView Grid.Row="2" ItemTemplate="{StaticResource FacebookSchemaTemplate}" x:Name="ListView">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="ListViewItem">
+                                            <ListViewItemPresenter PointerOverBackground="{x:Null}"/>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                    </ListView>
+                </Grid>
+            </ScrollViewer>
         </Grid>
-        <Border Margin="10" Grid.Row="1" x:Name="ShareBox" BorderThickness="1" BorderBrush="#555555" Padding="5">
-            <StackPanel Orientation="Vertical">
-                <TextBox Header="Title:" x:Name="TitleText"></TextBox>
-                <TextBox Header="Description:" x:Name="DescriptionText"></TextBox>
-                <TextBox Header="Url:" x:Name="UrlText" Text="https://github.com/Microsoft/UWPCommunityToolkit"></TextBox>
-                <Button Content="Share text directly" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,10,0,0"></Button>
-                <Button Content="Share with picture using dialog" x:Name="SharePictureButton" Click="SharePictureButton_OnClick" Margin="0,10,0,0"></Button> 
-            </StackPanel>
-        </Border>
-        <ListView Grid.Row="2" ItemTemplate="{StaticResource FacebookSchemaTemplate}" x:Name="ListView">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
     </Grid>
 </Page>
  
