--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/RangeSelector/RangeSelectorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/RangeSelector/RangeSelectorPage.xaml
@@ -19,13 +19,13 @@
                 <ColumnDefinition Width="250" />
                 <ColumnDefinition Width="50" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="{Binding RangeMin, ElementName=RangeSelector, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}" 
-                       Foreground="Black" />
+            <TextBlock Grid.Column="0" Text="{Binding RangeMin, ElementName=RangeSelectorControl, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}" 
+                       Foreground="Black" HorizontalAlignment="Left"/>
             <controls:RangeSelector x:Name="RangeSelectorControl" Grid.Column="1"
                  Minimum="{Binding Minimum.Value, Mode=TwoWay}" 
                  Maximum="{Binding Maximum.Value, Mode=TwoWay}" />
-            <TextBlock Grid.Column="2" Text="{Binding RangeMax, ElementName=RangeSelector, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}"
-                       Foreground="Black" />
+            <TextBlock Grid.Column="2" Text="{Binding RangeMax, ElementName=RangeSelectorControl, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}"
+                       Foreground="Black"  HorizontalAlignment="Right"/>
         </Grid>
         
     </Grid>
