--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
@@ -3,62 +3,156 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:Converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:twitter="using:Microsoft.Toolkit.Uwp.Services.Twitter"
     mc:Ignorable="d">
     <Page.Resources>
+        <Converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+
         <DataTemplate x:Key="TwitterSchemaTemplate" x:DataType="twitter:Tweet">
-            <Grid Margin="0,5,10,5" Height="100">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="100"></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <Image Grid.RowSpan="2" Grid.Column="0" Source="{Binding User.ProfileImageUrl}" Stretch="UniformToFill"/>
-                <TextBlock Text="{x:Bind Text}" Grid.Row="0" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"></TextBlock>
-                <TextBlock Text="{x:Bind CreationDate}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="16" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" FontWeight="ExtraLight"></TextBlock>
-            </Grid>
+            <Border Margin="12,0,12,12" Padding="12" Background="White" BorderBrush="#FFCCCCCC" BorderThickness="1" CornerRadius="4">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Image Source="{Binding User.ProfileImageUrl}" Stretch="Uniform" Height="50" Width="50" Grid.RowSpan="2" Margin="0,0,12,0" VerticalAlignment="Top"/>
+                        <TextBlock Text="{x:Bind User.Name}" Grid.Column="1" FontWeight="SemiBold"/>
+                        <TextBlock Text="{x:Bind User.ScreenName}" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" FontWeight="Light"/>
+                        <Image Grid.Column="2" Grid.RowSpan="2" Source="/SamplePages/Twitter Service/TwitterLogo.png" Height="24" Width="24" Stretch="Uniform" VerticalAlignment="Top"/>
+                    </Grid>
+                    <TextBlock Text="{x:Bind Text}" Grid.Row="1" FontWeight="SemiBold" TextWrapping="WrapWholeWords" TextTrimming="CharacterEllipsis" />
+                    <TextBlock Text="{x:Bind CreationDate}" Grid.Row="2" HorizontalAlignment="Right" FontWeight="ExtraLight" />
+                </Grid>
+            </Border>
         </DataTemplate>
     </Page.Resources>
 
-    <Grid Background="{StaticResource Brush-Grey-05}">
+    <Grid Background="{StaticResource Brush-Grey-05}" MaxWidth="800">
+        <Grid Margin="24" BorderThickness="1" BorderBrush="#FFCCCCCC" Background="{StaticResource Brush-Grey-04}" CornerRadius="4">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Vertical" Margin="10">
-                <TextBox Header="Consumer Key:" x:Name="ConsumerKey"></TextBox>
-                <TextBox Header="Consumer Secret:" x:Name="ConsumerSecret"></TextBox>
-                <TextBox Header="Callback URI:" x:Name="CallbackUri"></TextBox>
-                <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Image Height="100" Width="100" Stretch="Uniform" Source="/SamplePages/Twitter Service/TwitterLogo.png" Margin="24"/>
+                <Border CornerRadius="50" x:Name="ProfileImage" Height="100" Width="100" Visibility="Collapsed">
+                    <Border.Background>
+                        <ImageBrush Stretch="Uniform" ImageSource="{Binding ProfileImageUrl}"/>
+                    </Border.Background>
+                </Border>
             </StackPanel>
-            <Image Grid.Column="1" x:Name="ProfileImage" Source="{Binding ProfileImageUrl}" VerticalAlignment="Top" Margin="5"></Image>
+
+            <ScrollViewer Grid.Row="1">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    
+                    <!-- Credentials area -->
+                    <Grid >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+
+                            <Grid Background="#FFCCCCCC">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                            <Button x:Name="CredentialsBoxExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="CredentialsBoxExpandButton_OnClick"/>
+                                <TextBlock Grid.Column="1" Text="Credentials" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                            </Grid>
+
+                            <StackPanel x:Name="CredentialsBox" Orientation="Vertical" Margin="24" Grid.Row="1">
+                                <TextBox Header="Consumer Key:" x:Name="ConsumerKey" Margin="0,0,0,12"/>
+                                <TextBox Header="Consumer Secret:" x:Name="ConsumerSecret" Margin="0,0,0,12"/>
+                                <TextBox Header="Callback URI:" x:Name="CallbackUri" Margin="0,0,0,12"/>
+                                <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+                            </StackPanel>
+                        </Grid>
+                    
+                    <!-- Tweet area -->
+                    <Grid Grid.Row="1" x:Name="ShareBox">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Background="#FFCCCCCC">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Button x:Name="TweetBoxExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="TweetBoxExpandButton_OnClick"/>
+                            <TextBlock Grid.Column="1" Text="Tweet" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                        </Grid>
+                        
+                        <StackPanel Grid.Row="1" Margin="24" x:Name="TweetPanel">
+                            <TextBox Header="Tweet" x:Name="TweetText" Margin="0,0,0,12"/>
+                            <StackPanel Orientation="Horizontal">
+                                <Button Content="Share" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,0,12,0"/>
+                                <Button Content="Share with picture" x:Name="SharePictureButton" Click="SharePictureButton_OnClick"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
+                    
+                    <!-- Search area -->
+                    <Grid Grid.Row="2" x:Name="SearchBox">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Background="#FFCCCCCC">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Button x:Name="SearchBoxExpandButton" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Stretch" Content="" Click="SearchBoxExpandButton_OnClick"/>
+                            <TextBlock Grid.Column="1" Text="Search" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="12,6" Foreground="{StaticResource Brush-Grey-01}" />
+                        </Grid>
+
+                        <StackPanel Grid.Row="1" Margin="24" x:Name="SearchPanel">
+                            <TextBox Header="Search tag:" x:Name="TagText" Margin="0,0,0,12"/>
+                            <Button Content="Search" x:Name="SearchButton" Click="SearchButton_OnClick" Margin="0,10,0,0"></Button>
+                        </StackPanel>
+                    </Grid>
+                    
+                    <!-- Results area -->
+                    <ListView Grid.Row="3" ItemTemplate="{StaticResource TwitterSchemaTemplate}" x:Name="ListView" Margin="0,12,0,0" SelectionMode="None" IsItemClickEnabled="False">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="ListViewItem">
+                                            <ListViewItemPresenter PointerOverBackground="{x:Null}"/>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                    </ListView>
+                </Grid>
+            </ScrollViewer>
         </Grid>
-        <Border Margin="10" Grid.Row="1" x:Name="ShareBox" BorderThickness="1" BorderBrush="#555555" Padding="5">
-            <StackPanel Orientation="Vertical">
-                <TextBox Header="Tweet:" x:Name="TweetText"></TextBox>
-                <Button Content="Share" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,10,0,0"></Button>
-                <Button Content="Share with picture" x:Name="SharePictureButton" Click="SharePictureButton_OnClick" Margin="0,10,0,0"></Button>
-                <TextBox Header="Search tag:" x:Name="TagText"></TextBox>
-                <Button Content="Search" x:Name="SearchButton" Click="SearchButton_OnClick" Margin="0,10,0,0"></Button>
-            </StackPanel>
-        </Border>
-        <ListView Grid.Row="2" ItemTemplate="{StaticResource TwitterSchemaTemplate}" x:Name="ListView">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
     </Grid>
 </Page>
  
