--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
@@ -20,7 +20,7 @@
                     VerticalAlignment="Center"/>  
                 <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center"
                            Text="{Binding Title}" FontSize="16"
-                           TextWrapping="Wrap" Foreground="White" />
+                           TextTrimming="CharacterEllipsis" Foreground="White" />
             </Grid>
         </DataTemplate>
     </Page.Resources>
